--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PokeDex</title>
+    <link rel="stylesheet" href="assets/css/main.css" />
     <script src="assets/js/javascript.js" defer></script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Pokémon List</h1>
+    <div id="pokemon-container" class="pokemon-container"></div>
+  </body>
 </html>
