--- a/index.html
+++ b/index.html
@@ -7,8 +7,5 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <script src="assets/js/javascript.js" defer></script>
   </head>
-  <body>
-    <h1>Pokémon List</h1>
-    <div id="pokemon-container" class="pokemon-container"></div>
-  </body>
+  <body></body>
 </html>
